# KnowBase

./: README.md  main.py  pyproject.toml  todo.md
database/: schema.sql
src/: main.py
src/core/: config.py
src/infrastructure/utils/: LLMProvider.py  LLMUtil.py  ModelServiceRegistry.py  PathUtil.py  ScraperUtil.py  SeleniumUtils.py  StreamUtil.py
src/infrastructure/utils/db/: DatabaseManager.py  PostgresConnector.py  README.md
src/modules/: README.md
src/modules/knowbase/: __init__.py  api.py  core.py  models.py
src/modules/knowbase/core/: interfaces.py
src/modules/knowbase/core/NER/: README.md  config.py  enhanced_concept_extractor.py  langchain_ner.py  llm_client.py  llm_concept_extractor.py  pyhanlp_ner.py  test_extractor.py
src/modules/knowbase/core/importer/: __init__.py  base.py  base_importer.py  factory.py  file_importer_demo.py  folder_importer.py  importer_factory.py  todo
src/modules/knowbase/core/processing/: README.md  __init__.py  article_processor.py  concept_extractor.py  config.py  database_config.py  database_processor.py  examples.py  main.py  processing_pipeline.py  processors.py  result_manager.py
src/modules/knowbase/core/scraper/: xpaths.py
src/modules/knowbase/models/: __init__.py  article_models.py  config_models.py  enums.py  huggingface_models.py  knowledge_graph_models.py  models.py  processing_models.py  search_models.py
src/modules/vecembed/: __init__.py  api.py  core.py  models.py
src/modules/vecembed/core/embedding/: README.md  __init__.py  config.py  embedding_manager.py  embedding_service.py  examples.py  (+3 more)
(+5 files in other folders)
