[project]
name = "ai-trend-summary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "en-core-web-sm",
    "jieba>=0.42.1",
    "markdownify>=1.1.0",
    "openai>=1.97.0",
    "psycopg2>=2.9.10",
    "pydantic-ai>=0.4.7",
    "pytest>=8.4.1",
    "qdrant-client>=1.7.0",
    "requests>=2.32.4",
    "selenium>=4.34.2",
    "webdriver-manager>=4.0.2",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
